<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_out"
        android:layout_marginTop="@dimen/margin_out">

        <LinearLayout
            android:id="@+id/contentPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/contentPanel1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_out"
                android:layout_marginRight="@dimen/margin_out"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/team_a"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/scoreA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin_in"
                    android:text="@string/score_a"
                    android:textColor="@color/white"
                    android:textSize="@dimen/score_size" />

                <Button
                    android:id="@+id/plus_three_A"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin_in"
                    android:text="@string/plus_three" />

                <Button
                    android:id="@+id/plus_two_A"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin_in"
                    android:text="@string/plus_two" />

                <Button
                    android:id="@+id/free_shot_A"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin_in"
                    android:text="@string/free_shot" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/contentPanel2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_out"
                android:layout_marginRight="@dimen/margin_out"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/team_b"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/scoreB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin_in"
                    android:text="@string/score_b"
                    android:textColor="@color/white"
                    android:textSize="@dimen/score_size" />

                <Button
                    android:id="@+id/plus_three_B"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin_in"
                    android:text="@string/plus_three" />

                <Button
                    android:id="@+id/plus_two_B"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin_in"
                    android:text="@string/plus_two" />

                <Button
                    android:id="@+id/free_shot_B"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin_in"
                    android:text="@string/free_shot" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/timer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/reset"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/margin_top"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:textColor="@color/timer"
            android:textSize="24sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/reset"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/margin_out"
            android:gravity="center"
            android:text="@string/start" />

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/margin_out"
            android:text="@string/reset" />

    </RelativeLayout>

</RelativeLayout>